nginx-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: czertainly-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: czertainly-tlm
      app.kubernetes.io/name: czertainly-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: czertainly-tlm
        app.kubernetes.io/name: czertainly-nginx
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:1.25.2
        ports:
        - containerPort: 8443
        command:
          - 'nginx-debug'
          - '-g'
          - 'daemon off;'
        resources:
          requests:
            memory: "100Mi"
            cpu: 50m
          limits:
            memory: "100Mi"
            cpu: 50m
        volumeMounts:
          - name: czertainly-nginx-configmap-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
          - name: czertainly-nginx-configmap-volume
            mountPath: /etc/nginx/conf.d/ingress.conf
            subPath: ingress.conf
          - name: czertainly-nginx-configmap-volume
            mountPath: /etc/nginx/ssl/ingress.crt
            subPath: ingress.crt
          - name: czertainly-nginx-configmap-volume
            mountPath: /etc/nginx/ssl/ingress.key
            subPath: ingress.key
          - name: czertainly-nginx-configmap-volume
            mountPath: /etc/nginx/ssl/ingress.key.password
            subPath: ingress.key.password
          - name: czertainly-nginx-configmap-volume
            mountPath: /etc/nginx/ssl/trustedCA.crt
            subPath: trustedCA.crt
      volumes:
        - name: czertainly-nginx-configmap-volume
          configMap:
            name: czertainly-nginx-configmap
            items:
              - key: nginx.conf
                path: nginx.conf
              - key: ingress.conf
                path: ingress.conf
              - key: ingress.crt
                path: ingress.crt
              - key: ingress.key
                path: ingress.key
              - key: trustedCA.crt
                path: trustedCA.crt
              - key: ingress.key.password
                path: ingress.key.password
